# wasm-gol

./: Cargo.toml  README.md  index.html  index.js  package-lock.json  webpack.config.js
src/: lib.rs
